src/objects/Asia1_Subscription__c.object
<CustomObject>
    <fields>
        <fullName>ASIAONE_Subscription_Legacy_Id__c</fullName>
        <externalId>true</externalId>
        <label>ASIAONE Subscription Legacy Id</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Asia1__c</fullName>
        <label>Asia1</label>
        <referenceTo>Asia1__c</referenceTo>
        <relationshipLabel>Asia1_Subscriptions</relationshipLabel>
        <relationshipName>Asia1_Subscriptions</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Concurrent__c</fullName>
        <label>Concurrent</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Legacy_Create_By__c</fullName>
        <label>Legacy Create By</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Legacy_Create_Date__c</fullName>
        <label>Legacy Create Date</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Legacy_Update_By__c</fullName>
        <label>Legacy Update By</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Legacy_Update_Date__c</fullName>
        <label>Legacy Update Date</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Order_Line_Item__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Order Line Item</label>
        <referenceTo>Order_Line_Item__c</referenceTo>
        <relationshipLabel>Asia1_Subscriptions</relationshipLabel>
        <relationshipName>Asia1_Subscriptions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Reason_for_Failure__c</fullName>
        <label>Reason for Failure</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Service_Access_Flag__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Service Access Flag</label>
        <referenceTo>Service_Access_Flag__c</referenceTo>
        <relationshipLabel>Asia1_Subscriptions</relationshipLabel>
        <relationshipName>Asia1_Subscriptions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Enabled</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Disabled</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Service Activation Error</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Error Creation</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Subscription_History__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Subscription History</label>
        <referenceTo>Subscription_History__c</referenceTo>
        <relationshipLabel>Asia1_Subscriptions</relationshipLabel>
        <relationshipName>Asia1_Subscriptions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Subscription__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Subscription</label>
        <referenceTo>Zuora__Subscription__c</referenceTo>
        <relationshipLabel>Asia1_Subscriptions</relationshipLabel>
        <relationshipName>Asia1_Subscriptions</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Asia1_Subscription</label>
    <listViews>
        <fullName>All</fullName>
        <columns>Asia1__c</columns>
        <columns>Subscription__c</columns>
        <columns>NAME</columns>
        <columns>CREATED_DATE</columns>
        <columns>Service_Access_Flag__c</columns>
        <columns>Status__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>AS{0000000000}</displayFormat>
        <label>Asia1_Subscription Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Asia1_Subscriptions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>